--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@ body {
   color: #e5ebf3;
 }
 
-.slider {
-  position: relative;
-  width: 90vw;
-  height: 90vh;
-  overflow: hidden;
+.slide {
+  /* existing styles */
+  background-size: contain;
+  background-position: center;
+  max-width: 600px; /* or any other value that suits your needs */
+  max-height: 400px; /* or any other value that suits your needs */
 }
 
 .slide {
